# anima-client

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/anima-agent/: Cargo.toml
crates/anima-agent/src/: lib.rs  main.rs
crates/anima-assets/: Cargo.toml
crates/anima-assets/src/: anim.rs  animdata.rs  art.rs  cliloc.rs  gump.rs  hues.rs  lib.rs  map.rs  mounts.rs  multis.rs  radarcol.rs  sound.rs  texmap.rs  tiledata.rs  uop.rs
crates/anima-contract-json/: Cargo.toml
crates/anima-contract-json/src/: lib.rs
crates/anima-core/: Cargo.toml
crates/anima-core/src/: agent.rs  gump_layout.rs  lib.rs  types.rs
crates/anima-core/src/net/: framing.rs  game.rs  huffman.rs  lengths.rs  login.rs  mod.rs  movement.rs  outgoing.rs  packet.rs
crates/anima-core/src/path/: mod.rs
crates/anima-core/src/world/: mod.rs
crates/anima-core/tests/: golden.rs
crates/anima-desktop/: Cargo.toml  README.md  tauri.conf.json
crates/anima-desktop/frontend-dist/: index.html
crates/anima-desktop/icons/: generate.py  icon.icns
crates/anima-desktop/src/: main.rs
crates/anima-net/: Cargo.toml  build.rs
crates/anima-net/src/: json.rs  lib.rs  main.rs  play_server.rs  regions.rs  scene.rs  uo_dir.rs
crates/anima-wasm/: Cargo.toml
crates/anima-wasm/src/: lib.rs
docs/: CLASSICUO_GAPS.md  DESIGN.md  DISTRIBUTION.md  MOVEMENT.md  RENDERING.md  TESTING.md
scripts/: build-app.sh  drive.py  gm.sh
web/: index.html  main.js
