[package]
name = "anima-core"
version = "0.0.0"
edition = "2021"
description = "Headless Ultima Online game core: protocol, world model, asset IO, pathfinding. No rendering/UI/audio. Shared by AI agents and the human client."
license = "MIT OR Apache-2.0"

[lib]
# rlib: used by native consumers (Tauri desktop backend, AI agents).
# cdylib added later for WASM (browser) and C-FFI as needed.
crate-type = ["rlib"]

[dependencies]
# Intentionally near-zero external deps — std only — so the core stays small,
# builds offline, and compiles cleanly to WASM later.
#
# Exception: the UO protocol *mandates* zlib for packed gumps (0xDD). `miniz_oxide`
# is a tiny, pure-Rust, wasm-clean DEFLATE/zlib implementation (no C, no system
# zlib), so it keeps the "offline + WASM-clean" guarantee while satisfying the
# protocol. Used only by `net::game` to inflate 0xDD layout/text blocks.
miniz_oxide = "0.8"
