[package]
name = "anima-net"
version = "0.0.0"
edition = "2021"
description = "Native TCP driver for anima-core's sans-IO protocol. Connects to a UO server and drives the login handshake."
license = "MIT OR Apache-2.0"

[dependencies]
anima-core = { path = "../anima-core" }
anima-assets = { path = "../anima-assets" }
serde_json = "1"
tiny_http = "0.12"
# Embeds `web/` (the renderer: plain JS + one vendored PixiJS build, ~1MB) into
# this binary at compile time, as a fallback when `play_server::PlayConfig`
# has no on-disk `web_dir` — needed by `anima-desktop`, which runs outside a
# repo checkout and so has no `web/` directory to point at. Pure Rust, no
# build.rs, no bundler; a plain proc-macro `include_dir!()` call.
include_dir = "0.7"

[[bin]]
name = "anima-login"
path = "src/main.rs"

[[bin]]
name = "anima-agent"
path = "src/bin/agent.rs"

[[bin]]
name = "find-water"
path = "src/bin/find_water.rs"
