[package]
name = "anima-wasm"
version = "0.0.0"
edition = "2021"
description = "WASM bindings for anima-core: run the UO protocol/world in the browser; JS does the WebSocket IO and rendering."
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anima-core = { path = "../anima-core" }
wasm-bindgen = "0.2"
serde_json = "1"

# Build the browser module with:  wasm-pack build crates/anima-wasm --target web
# (the sans-IO core means JS owns the WebSocket; this wraps decode + world + observe).
